--- a/core/Makefile
+++ b/core/Makefile
@@ -1,10 +1,21 @@
 CXX=g++
 CFLAGS=-O3 -Wall
 
-test: WordGraph.o test.o WordMost.o gen_chain_word_n.o gen_chain_char_n.o CharChain.o WordChain.o 
-	$(CXX) $^ -o $@ 
+all: lib lib/core.a lib/core.h test
+
+lib/core.a: WordGraph.o WordMost.o gen_chain_word_n.o gen_chain_char_n.o CharChain.o WordChain.o lib
+	ar -r $@ WordGraph.o WordMost.o gen_chain_word_n.o gen_chain_char_n.o CharChain.o WordChain.o
+	
+lib/core.h: lib
+	cp core.h lib/core.h
+	
+test: test.o lib/core.a
+	$(CXX) -o $@ $^
+	
+lib: 
+	mkdir -p lib
 	
 .PHONY: clean
 
 clean:
-	-rm -f *.o test
+	-rm -rf *.o test lib
